--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 .navbar {
-    background-color: #298A08;
+    background-color: #58fafa;
 }
 
 .quem-somos {
@@ -18,4 +18,10 @@ body {
 
 .parceiros {
     background-color: #58fafa;
+    color: white;
+}
+
+.bg-footer {
+    background-color: black;
+    color: white;
 }
